--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "About") %>
-<h1>About</h1>
+<h1>アバウト</h1>
 <p>
   The <a href="http://railstutorial.jp/"><em>Ruby on Rails Tutorial</em></a>
   is a <a href="http://railstutorial.jp/book">book</a> and
