--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Help") %>
-<h1>Help</h1>
+<h1>ヘルプ</h1>
 <p>  Get help on the Ruby on Rails Tutorial at the
   <a href="http://railstutorial.jp/help">Rails Tutorial help section</a>.
   To get help on this sample app, see the
