写真付きでユーザ名を表示させる

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
-<%= @user.name %>, <%= @user.email %>
+<% provide(:title, @user.name) %>
+<h1>
+  <%= gravatar_for @user %>
+  <%= @user.name %>
+</h1>
+<p>email : <%= @user.email %></p>
+<p>created_at : <%= @user.created_at%></p>
+<p>updated_at : <%= @user.updated_at%></p>
+<p>Time.now : <%= Time.now %></p>
