--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container">
-      <% flash.each do |message_type, message| %>
-      <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
       <%= yield %>
     </div>
     <%= render 'layouts/footer' %>
